--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -12,8 +12,8 @@
 #### [《九评共产党》](https://github.com/begood0513/9ping.md/blob/master/README.md) &nbsp;|&nbsp; [《解体党文化》](../../../../jtdwh.md/blob/master/README.md)  &nbsp;|&nbsp; [《共产主义的终极目的》](../../../../gczydzjmd.md/blob/master/README.md) &nbsp;|&nbsp; [《魔鬼在统治我们的世界》](../../../../mgztzwmdsj.md/blob/master/README.md) 
 #### [ 二十大召开前 红二代：不少人反对习近平连任(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017214.md)
 #### [ 习近平回国隐身传言四起 大外宣放风其连任？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13831695.md)
-#### [ 传中共百岁元老宋平罕见露面 谈话遭封杀](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13831267.md)
 #### [ 中共智库发文否定习近平言论 外界热议](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/656562.md)
+#### [ 传中共百岁元老宋平罕见露面 谈话遭封杀](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13831267.md)
 #### [ 二十大前 习近平震慑政敌力度空前(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017466.md)
 #### [ 习近平连任有悬念 二十大前可能突发两大事件(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017225.md)
 #### [ 【远见快评】习缺席重要军方会 央视镜头泄露啥](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13831601.md)
@@ -48,6 +48,6 @@
 #### [ 隔离收费 舆论哗然 重庆官员：经济很崩溃](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13831434.md)
 #### [ 章天亮：傅政华被判死缓 政治大风暴将至](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/656472.md)
 #### [ 【拍案惊奇】习判两人死缓 直指背后大佬](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13831371.md)
+#### [ 俄乌战场现中国炮弹 牵出中共扶持阿共史](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13831630.md)
 #### [ 暗讽清零不可能实现？益智游戏“羊了个羊”火爆全网](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/656478.md)
 #### [ 二十大前中共高度紧张 北京高校缩短十一长假](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103535963.md)
-#### [ 一部短片告诉你如何打败难以抗拒的诱惑](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13830609.md)
